fixed spacing between images

--- a/week1/css/main.css
+++ b/week1/css/main.css
@@ -39,7 +39,7 @@ font-style: italic;
   position: absolute;
   z-index:-10;
   font-size: 30pt;
-  
+
 }
 
 .images{
@@ -68,7 +68,7 @@ margin-top: 20%;
 
 }
 
-.pic3:hover { opacity: 0.3; filter: alpha(opacity=30); }
+.col-sm-4:hover { opacity: 0.3; filter: alpha(opacity=30); }
 .row{
 
   margin-top: 15%;
@@ -76,6 +76,11 @@ margin-top: 20%;
 
 }
 
+.container-fluid{
+  position: absolute;
+  margin-top:2%;
+
+}
 .col-sm-4{
 
 }
